Moved project ID for Luigi's Box tracking script to parameters.

--- a/templates/Front/Inline/MeasuringScript/luigisBox.html.twig
+++ b/templates/Front/Inline/MeasuringScript/luigisBox.html.twig
@@ -1,5 +1,1 @@
-{% if isSlovakDomain() %}
-    <script async src="https://scripts.luigisbox.com/LBX-188928.js"></script>
-{% else %}
-    <script async src="https://scripts.luigisbox.com/LBX-188877.js"></script>
-{% endif %}
+<script async src="https://scripts.luigisbox.com/LBX-{{ projectId }}.js"></script>
