Removed init function for autocomplete.

--- a/templates/Front/Content/Search/searchBox.html.twig
+++ b/templates/Front/Content/Search/searchBox.html.twig
@@ -11,45 +11,7 @@
                     id="luigis-autocomplete"
                     autocomplete="off"
                 />
-                <script>
-                    function LBInitAutocomplete() {
-                        AutoComplete({
-                            Layout: 'hero',
-                            TrackerId: '{{ luigisTrackerId }}',
-                            Types: [
-                                {
-                                    type: 'product',
-                                    name: '{{ 'Produkty'|trans }}',
-                                    size: 7
-                                },
-                                {
-                                    type: 'category',
-                                    name: '{{ 'Kategorie'|trans }}'
-                                },
-                                {
-                                    type: 'set',
-                                    name: '{{ 'Sety'|trans }}'
-                                },
-                                {
-                                    type: 'brand',
-                                    name: '{{ 'Značky'|trans }}'
-                                }
-                            ],
-                            Hint: function (query) {
-                                return '{{ 'Pro vyhledání'|trans }} <span>' + query + '</span> {{ 'stiskněte Enter'|trans }}';
-                            },
-                            NoResultsMessage: function(query, numberOfResults) {
-                                if (numberOfResults === 0) {
-                                    return '{{ 'Pro dotaz'|trans }}'  + ' "' + query + '" ' +  '{{ 'jsme nenašli žádné výsledky'|trans }}';
-                                }
-
-                                return '{{ 'Pro dotaz'|trans }}'  + ' "' + query + '" ' + '{{ 'jsme našli' }}' + numberOfResults + '{{ 'výsledků' }}';
-                            },
-                            ShowAllTitle: '{{ 'Zobrazit všechny produkty'|trans }}'
-                        }, '#luigis-autocomplete')
-                    }
-                </script>
-                <script src="https://cdn.luigisbox.com/autocomplete.js" async onload="LBInitAutocomplete()"></script>
+                <script src="https://cdn.luigisbox.com/autocomplete.js" async></script>
             </div>
             <div class="search__form__submit js-search-autocomplete-submit">
                 <button class="search__form__submit__button btn-no-style" type="submit">
