Added a graph with a sum of order values to administration dashboard

--- a/templates/bundles/ShopsysFrameworkBundle/Admin/Content/Default/index.html.twig
+++ b/templates/bundles/ShopsysFrameworkBundle/Admin/Content/Default/index.html.twig
@@ -53,18 +53,28 @@
     <div class="wrap-box">
         <div class="wrap-box__half wrap-box__half--in-row">
             <canvas
-                class="js-line-chart"
-                data-chart-labels="{{ newOrdersInLastTwoWeeksLabels|json_encode }}"
-                data-chart-values="{{ newOrdersInLastTwoWeeksValues|json_encode }}"
-                data-chart-title="{{ 'New orders'|trans }}"
+                    class="js-line-chart"
+                    data-chart-labels="{{ newOrdersInLastTwoWeeksLabels|json_encode }}"
+                    data-chart-values="{{ newOrdersInLastTwoWeeksValues|json_encode }}"
+                    data-chart-title="{{ 'New orders'|trans }} ({{ 'Počet'|trans }})"
             ></canvas>
         </div>
         <div class="wrap-box__half wrap-box__half--in-row">
             <canvas
-                class="js-line-chart"
-                data-chart-labels="{{ registeredInLastTwoWeeksLabels|json_encode }}"
-                data-chart-values="{{ registeredInLastTwoWeeksValues|json_encode }}"
-                data-chart-title="{{ 'New registered customers'|trans }}"
+                    class="js-line-chart"
+                    data-chart-labels="{{ newOrdersInLastTwoWeeksLabels|json_encode }}"
+                    data-chart-values="{{ newOrdersInLastTwoWeeksSums|json_encode }}"
+                    data-chart-title="{{ 'New orders'|trans }} ({{ 'Obrat'|trans }})"
+            ></canvas>
+        </div>
+    </div>
+    <div class="wrap-box">
+        <div class="wrap-box__half wrap-box__half--in-row">
+            <canvas
+                    class="js-line-chart"
+                    data-chart-labels="{{ registeredInLastTwoWeeksLabels|json_encode }}"
+                    data-chart-values="{{ registeredInLastTwoWeeksValues|json_encode }}"
+                    data-chart-title="{{ 'New registered customers'|trans }}"
             ></canvas>
         </div>
     </div>
