[TROPIC-139] Add product parameter to Mergado feed

--- a/templates/Admin/Content/MergadoFeed/feed.xml.twig
+++ b/templates/Admin/Content/MergadoFeed/feed.xml.twig
@@ -85,6 +85,7 @@
         {% if item.standardPrice is not null %}
             <CUSTOM_LABEL_2>{{ item.standardPrice }}</CUSTOM_LABEL_2>
         {% endif %}
+        <CUSTOM_LABEL_3>{{ item.promoDiscountDisabled }}</CUSTOM_LABEL_3>
     </ITEM>
 {% endblock %}
 
